name:           snaplet-postgresql-simple
version:        0.6.0.3
synopsis:       postgresql-simple snaplet for the Snap Framework
description:    This snaplet contains support for using the Postgresql
                database with a Snap Framework application via the
                postgresql-simple package.  It also includes an
                authentication backend.
license:        BSD3
license-file:   LICENSE
author:         Doug Beardsley
maintainer:     mightybyte@gmail.com
build-type:     Simple
tested-with:    GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.1, GHC == 7.10.2
cabal-version:  >= 1.6
homepage:       https://github.com/mightybyte/snaplet-postgresql-simple
category:       Web, Snap

extra-source-files:
  LICENSE
  README.md

data-files:
  resources/db/devel.cfg
  resources/auth/devel.cfg

source-repository head
  type:     git
  location: https://github.com/mightybyte/snaplet-postgresql-simple.git

Library
  hs-source-dirs: src

  exposed-modules:
    Snap.Snaplet.PostgresqlSimple
    Snap.Snaplet.Auth.Backends.PostgresqlSimple

  other-modules:
    Snap.Snaplet.PostgresqlSimple.Internal
    Paths_snaplet_postgresql_simple

  build-depends:
    base                       >= 4       && < 4.9,
    bytestring                 >= 0.9.1   && < 0.11,
    clientsession              >= 0.7.2   && < 0.10,
    configurator               >= 0.2     && < 0.4,
    errors                     >= 1.4     && < 1.5,
    lens                                     < 4.13,
    MonadCatchIO-transformers  >= 0.3     && < 0.4,
    mtl                        >= 2       && < 2.3,
    postgresql-simple          >= 0.3     && < 0.5,
    resource-pool-catchio      >= 0.2     && < 0.3,
    snap                       >= 0.10    && < 0.15,
    text                       >= 0.11    && < 1.3,
    transformers               >= 0.2     && < 0.5,
    unordered-containers       >= 0.2     && < 0.3


  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
               -fno-warn-orphans -fno-warn-unused-do-bind
