name:           snaplet-postgresql-simple
version:        1.1.0.0
synopsis:       postgresql-simple snaplet for the Snap Framework
description:    This snaplet contains support for using the Postgresql
                database with a Snap Framework application via the
                postgresql-simple package.  It also includes an
                authentication backend.
license:        BSD3
license-file:   LICENSE
author:         Doug Beardsley
maintainer:     mightybyte@gmail.com
build-type:     Simple
cabal-version:  >= 1.10
homepage:       https://github.com/mightybyte/snaplet-postgresql-simple
category:       Web, Snap

tested-with:
  GHC == 7.8.4,
  GHC == 7.10.3,
  GHC == 8.0.1,
  GHC == 8.2.1,
  GHC == 8.4.1

extra-source-files:
  LICENSE
  README.md

data-files:
  resources/db/devel.cfg
  resources/auth/devel.cfg

source-repository head
  type:     git
  location: https://github.com/mightybyte/snaplet-postgresql-simple.git


flag Example
  description: Enable example
  default: False

Library
  hs-source-dirs: src

  exposed-modules:
    Snap.Snaplet.PostgresqlSimple
    Snap.Snaplet.Auth.Backends.PostgresqlSimple

  other-modules:
    Snap.Snaplet.PostgresqlSimple.Internal
    Paths_snaplet_postgresql_simple

  build-depends:
    base                       >= 4       && < 4.12,
    bytestring                 >= 0.9.1   && < 0.11,
    clientsession              >= 0.7.2   && < 0.10,
    configurator               >= 0.2     && < 0.4,
    lens                       >= 3.7.6   && < 4.17,
    lifted-base                >= 0.2     && < 0.3,
    monad-control              >= 1.0     && < 1.1,
    mtl                        >= 2       && < 2.3,
    postgresql-simple          >= 0.3     && < 0.6,
    resource-pool              >= 0.2     && < 0.3,
    snap                       >= 1.0     && < 1.2,
    text                       >= 0.11    && < 1.3,
    transformers               >= 0.2     && < 0.6,
    transformers-base          >= 0.4     && < 0.5,
    unordered-containers       >= 0.2     && < 0.3


  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
               -fno-warn-orphans -fno-warn-unused-do-bind

  default-language: Haskell2010

executable Example
  if flag(Example)
    buildable: True
  else
    buildable: False
  build-depends: base,
                 aeson,
                 bytestring,
                 heist,
                 lens,
                 postgresql-simple,
                 mtl,
                 snap,
                 snap-core,
                 snaplet-postgresql-simple,
                 text,
                 time,
                 xmlhtml
  default-language:    Haskell2010
  hs-source-dirs: example
  main-is: Site.hs
